# arkclaw-to-saas

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  chat.py  diag.py  instances.py
backend/app/core/: config.py  security.py
backend/app/schemas/: auth.py  chat.py
backend/app/services/: arkclaw.py  jwt_service.py  lark.py  volc_sign.py
demo/: arkclaw_api.py  main.py  volc_sign.py  web_demo.py
widget/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
widget/examples/nextjs/: README.md  next.config.mjs  package.json  tsconfig.json
widget/examples/nextjs/app/: layout.tsx  page.tsx
widget/examples/nextjs/components/: ClawProvider.tsx
widget/examples/react-app/: README.md  index.html  package.json  tsconfig.json
widget/examples/vanilla-html/: README.md  index.html
widget/scripts/: verify-action-pipeline.mjs
widget/src/api/: client.ts
widget/src/components/: ActionLogPanel.tsx  ChatPanel.tsx  InputBar.tsx  InstancePicker.tsx  LoginPrompt.tsx  MediaPreview.tsx  MessageItem.tsx  MessageList.tsx  QuickActions.tsx  SelectionToolbar.tsx  ThinkingSteps.tsx
widget/src/hooks/: useHostBridge.ts  useWebSocket.ts
widget/src/sdk/: Arkclaw.ts  HostBridge.ts  index.ts  inline.ts  types.ts  utils.ts
widget/src/store/: chatStore.ts
widget/src/styles/: widget.css
widget/src/types/: css.d.ts
widget/src/utils/: hostPrompt.ts
(+1 files in other folders)
